# libstacktracepp

./: CMakeLists.txt
include/stacktracepp/: stack_frame.hpp  stack_trace.hpp
src/: CMakeLists.txt  stack_frame.cpp  stack_trace.cpp
